--- a/jelastic/configuration_manager_resources.conf
+++ b/jelastic/configuration_manager_resources.conf
@@ -1,2 +1,9 @@
-versions/9.1.3
-
+[conf]
+        versions/9.1.3/etc
+[libraries]
+        versions/9.1.3/lib
+        versions/9.1.3/modules
+[data]
+        versions/9.1.3/webapps
+        versions/9.1.3/resources
+        versions/9.1.3/data
